--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Adoptium", "choco", "Dmaven", "gitmodules", "hotspot", "libexec", "notmatch", "pqsql"]
+  "cSpell.words": ["Adoptium", "choco", "Dmaven", "gitmodules", "hotspot", "libexec", "notmatch", "pqsql"],
+  "prettier.requireConfig": false
 }
